<resources>
    <string name="app_name">SocialMediaProfile</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="more">More</string>
    <string name="block">Block</string>
    <string name="hello">Hello</string>
    <string name="friends">Friends</string>
    <string name="example_profile">Example Profile</string>
</resources>
